--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server -d --progress --inline --hot --history-api-fallback --host 0.0.0.0",
     "build:debug": "webpack -d --progress --env.verbose",
-    "build": "webpack --progress",
+    "build": "webpack --progress --display-entrypoints",
     "build:prod": "webpack -p --progress --env.NODE_ENV=production --env.BUILD_PDF",
     "build:analyse:": "webpack --progress --profile --json > stats.json",
     "build:travis": "webpack -p --env.NODE_ENV=production",
@@ -53,6 +53,7 @@
     "react-bootstrap": "^0.31.1",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.4.1",
+    "react-loadable": "^5.4.0",
     "react-overlays": "^0.8.3",
     "react-redux": "^4.4.9",
     "react-router": "^3.2.1",
