--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-bootstrap": "^0.31.1",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
+    "react-loadable": "^5.4.0",
     "react-overlays": "^0.8.3",
     "react-redux": "^4.4.9",
     "react-router": "^3.2.1",
