--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server -d --progress --inline --hot --host 0.0.0.0",
     "build:debug": "webpack -d --progress --env.verbose",
-    "build": "webpack --progress --display-entrypoints",
+    "build": "webpack --progress",
     "build:prod": "webpack -p --progress --env.NODE_ENV=production --env.BUILD_PDF",
     "build:analyse:": "webpack --progress --profile --json > stats.json",
     "build:travis": "webpack -p --env.NODE_ENV=production",
