--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "highlight.js": "^9.11.0",
     "history": "^2.1.2",
     "markdown-it": "^8.3.1",
+    "parse5": "^5.1.0",
     "posthtml-parser": "^0.2.0",
     "posthtml-render": "^1.0.6",
     "prop-types": "^15.6.0",
     "re-reselect": "^0.5.0",
     "react": "^16.4.1",
+    "react-attr-converter": "^0.3.1",
     "react-bootstrap": "^0.31.1",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
